# synth_game

./: CMakeLists.txt  audio.cpp  audio.h  constants.h  engine  icon.svg.import  input.cpp  input.h  main.cpp  oscillator.cpp  oscillator.h  physics.cpp  physics.h  project.godot  render.cpp  render.h  sequencer.cpp  sequencer.h  vcpkg.json
scenes/: Main.tscn  Sequencer.tscn  audio.tscn  clock.tscn  operator.tscn  quantizer.tscn
scripts/: Main.gd  Sequencer.gd
